--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.11.1",
+    "victory": "^36.6.11",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.2.0"
   },
